--- a/NetBeansProjects/Hoken_Visitas_B002_2/nbproject/project.properties
+++ b/NetBeansProjects/Hoken_Visitas_B002_2/nbproject/project.properties
@@ -32,23 +32,37 @@ dist.jar=${dist.dir}/Hoken_Visitas_B002_2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.iText-5.0.5.jar=../../iText-5.0.5.jar
-file.reference.jsoup-1.11.1.jar=../../../Downloads/jsoup-1.11.1.jar
-file.reference.mysql-connector-java-5.1.45-bin.jar=../mysql-connector-java-5.1.45/mysql-connector-java-5.1.45/mysql-connector-java-5.1.45-bin.jar
-file.reference.mysql-connector-java-5.1.45.zip=../mysql-connector-java-5.1.45.zip
+file.reference.commons-beanutils-1.8.0.jar=C:\\Users\\Alan\\Downloads\\jasper_reports_libs\\lib\\commons-beanutils-1.8.0.jar
+file.reference.commons-collections-3.2.1.jar=C:\\Users\\Alan\\Downloads\\jasper_reports_libs\\lib\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=C:\\Users\\Alan\\Downloads\\jasper_reports_libs\\lib\\commons-digester-2.1.jar
+file.reference.commons-logging-1.1.1.jar=C:\\Users\\Alan\\Downloads\\jasper_reports_libs\\lib\\commons-logging-1.1.1.jar
+file.reference.groovy-all-2.0.1.jar=C:\\Users\\Alan\\Downloads\\jasper_reports_libs\\lib\\groovy-all-2.0.1.jar
+file.reference.jasperreports-5.6.0.jar=C:\\Users\\Alan\\Downloads\\jasper_reports_libs\\lib\\jasperreports-5.6.0.jar
+file.reference.jasperreports-fonts-5.6.0.jar=C:\\Users\\Alan\\Downloads\\jasper_reports_libs\\lib\\jasperreports-fonts-5.6.0.jar
+file.reference.jcalendar-1.4.jar=C:\\Program Files\\NetBeans 8.2\\java\\modules\\ext\\jcalendar-1.4.jar
+file.reference.jdt-compiler-3.1.1.jar=C:\\Users\\Alan\\Downloads\\jdt-compiler-3.1.1.jar\\jdt-compiler-3.1.1.jar
+file.reference.jsoup-1.11.1.jar-1=C:\\Program Files\\NetBeans 8.2\\java\\modules\\ext\\jsoup-1.11.1.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
+file.reference.mysql-connector-java-5.1.45-bin.jar=C:\\Program Files\\NetBeans 8.2\\java\\modules\\ext\\mysql-connector-java-5.1.45-bin.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.jsoup.classpath}:\
-    ${libs.JCalendar.classpath}:\
+    ${file.reference.jsoup-1.11.1.jar-1}:\
     ${libs.beans-binding.classpath}:\
-    ${file.reference.iText-5.0.5.jar}:\
-    ${file.reference.jsoup-1.11.1.jar}:\
-    \    :\
-    ${file.reference.mysql-connector-java-5.1.45.zip}:\
+    ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mysql-connector-java-5.1.45-bin.jar}:\
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.commons-beanutils-1.8.0.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.groovy-all-2.0.1.jar}:\
+    ${file.reference.jasperreports-5.6.0.jar}:\
+    ${file.reference.jasperreports-fonts-5.6.0.jar}:\
+    ${file.reference.jdt-compiler-3.1.1.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${libs.JasperReport.classpath}
     ${libs.SeaGlassLookAndFeel.classpath}
 # Space-separated list of extra javac options
