--- a/NetBeansProjects/Hoken_Visitas_B002_2/nbproject/project.properties
+++ b/NetBeansProjects/Hoken_Visitas_B002_2/nbproject/project.properties
@@ -32,18 +32,31 @@ dist.jar=${dist.dir}/Hoken_Visitas_B002_2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-beanutils-1.8.0.jar=C:\\Users\\Alan\\Downloads\\jasper_reports_libs\\lib\\commons-beanutils-1.8.0.jar
+file.reference.commons-beanutils-1.7.0.jar=commons-beanutils-1.7.0.jar
+file.reference.commons-collections-3.1.jar=commons-collections-3.1.jar
 file.reference.commons-collections-3.2.1.jar=C:\\Users\\Alan\\Downloads\\jasper_reports_libs\\lib\\commons-collections-3.2.1.jar
+file.reference.commons-digester-1.7.jar=commons-digester-1.7.jar
 file.reference.commons-digester-2.1.jar=C:\\Users\\Alan\\Downloads\\jasper_reports_libs\\lib\\commons-digester-2.1.jar
 file.reference.commons-logging-1.1.1.jar=C:\\Users\\Alan\\Downloads\\jasper_reports_libs\\lib\\commons-logging-1.1.1.jar
+file.reference.commons-logging-1.1.1.jar-1=commons-logging-1.1.1.jar
+file.reference.groovy-all-1.5.3.jar=groovy-all-1.5.3.jar
 file.reference.groovy-all-2.0.1.jar=C:\\Users\\Alan\\Downloads\\jasper_reports_libs\\lib\\groovy-all-2.0.1.jar
+file.reference.itext-2.1.7.jar=itext-2.1.7.jar
+file.reference.jasperreports-5.5.1.jar=jasperreports-5.5.1.jar
 file.reference.jasperreports-5.6.0.jar=C:\\Users\\Alan\\Downloads\\jasper_reports_libs\\lib\\jasperreports-5.6.0.jar
 file.reference.jasperreports-fonts-5.6.0.jar=C:\\Users\\Alan\\Downloads\\jasper_reports_libs\\lib\\jasperreports-fonts-5.6.0.jar
 file.reference.jcalendar-1.4.jar=C:\\Program Files\\NetBeans 8.2\\java\\modules\\ext\\jcalendar-1.4.jar
 file.reference.jdt-compiler-3.1.1.jar=C:\\Users\\Alan\\Downloads\\jdt-compiler-3.1.1.jar\\jdt-compiler-3.1.1.jar
+file.reference.jdt-compiler.jar=jdt-compiler.jar
+file.reference.jsoup-1.11.1.jar=jsoup-1.11.1.jar
 file.reference.jsoup-1.11.1.jar-1=C:\\Program Files\\NetBeans 8.2\\java\\modules\\ext\\jsoup-1.11.1.jar
-file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
+file.reference.jsoup-1.11.2-javadoc.jar=jsoup-1.11.2-javadoc.jar
+file.reference.jsoup-1.11.2-sources.jar=jsoup-1.11.2-sources.jar
+file.reference.jsoup-1.11.2.jar=jsoup-1.11.2.jar
 file.reference.mysql-connector-java-5.1.45-bin.jar=C:\\Program Files\\NetBeans 8.2\\java\\modules\\ext\\mysql-connector-java-5.1.45-bin.jar
+file.reference.poi-3.9.jar=poi-3.9.jar
+file.reference.seaglass-0.0.1-SNAPSHOT.jar=seaglass-0.0.1-SNAPSHOT.jar
+file.reference.servlet-api-2.4.jar=servlet-api-2.4.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -53,17 +66,21 @@ javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mysql-connector-java-5.1.45-bin.jar}:\
-    ${libs.eclipselink.classpath}:\
-    ${file.reference.commons-beanutils-1.8.0.jar}:\
-    ${file.reference.commons-collections-3.2.1.jar}:\
-    ${file.reference.commons-digester-2.1.jar}:\
-    ${file.reference.commons-logging-1.1.1.jar}:\
-    ${file.reference.groovy-all-2.0.1.jar}:\
-    ${file.reference.jasperreports-5.6.0.jar}:\
-    ${file.reference.jasperreports-fonts-5.6.0.jar}:\
-    ${file.reference.jdt-compiler-3.1.1.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${libs.JasperReport.classpath}
+    ${file.reference.commons-beanutils-1.7.0.jar}:\
+    ${file.reference.commons-collections-3.1.jar}:\
+    ${file.reference.commons-digester-1.7.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar-1}:\
+    ${file.reference.groovy-all-1.5.3.jar}:\
+    ${file.reference.itext-2.1.7.jar}:\
+    ${file.reference.jsoup-1.11.2-javadoc.jar}:\
+    ${file.reference.jsoup-1.11.2-sources.jar}:\
+    ${file.reference.jsoup-1.11.2.jar}:\
+    ${file.reference.poi-3.9.jar}:\
+    ${file.reference.seaglass-0.0.1-SNAPSHOT.jar}:\
+    ${file.reference.servlet-api-2.4.jar}:\
+    ${file.reference.jasperreports-5.5.1.jar}:\
+    ${file.reference.jsoup-1.11.1.jar}:\
+    ${file.reference.jdt-compiler.jar}
     ${libs.SeaGlassLookAndFeel.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
