--- a/NetBeansProjects/Hoken_Visitas_B002_2/nbproject/project.properties
+++ b/NetBeansProjects/Hoken_Visitas_B002_2/nbproject/project.properties
@@ -45,15 +45,14 @@ file.reference.itext-2.1.7.jar=itext-2.1.7.jar
 file.reference.jasperreports-5.5.1.jar=jasperreports-5.5.1.jar
 file.reference.jasperreports-5.6.0.jar=C:\\Users\\Alan\\Downloads\\jasper_reports_libs\\lib\\jasperreports-5.6.0.jar
 file.reference.jasperreports-fonts-5.6.0.jar=C:\\Users\\Alan\\Downloads\\jasper_reports_libs\\lib\\jasperreports-fonts-5.6.0.jar
-file.reference.jcalendar-1.4.jar=C:\\Program Files\\NetBeans 8.2\\java\\modules\\ext\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar=jcalendar-1.4.jar
 file.reference.jdt-compiler-3.1.1.jar=C:\\Users\\Alan\\Downloads\\jdt-compiler-3.1.1.jar\\jdt-compiler-3.1.1.jar
 file.reference.jdt-compiler.jar=jdt-compiler.jar
 file.reference.jsoup-1.11.1.jar=jsoup-1.11.1.jar
-file.reference.jsoup-1.11.1.jar-1=C:\\Program Files\\NetBeans 8.2\\java\\modules\\ext\\jsoup-1.11.1.jar
 file.reference.jsoup-1.11.2-javadoc.jar=jsoup-1.11.2-javadoc.jar
 file.reference.jsoup-1.11.2-sources.jar=jsoup-1.11.2-sources.jar
 file.reference.jsoup-1.11.2.jar=jsoup-1.11.2.jar
-file.reference.mysql-connector-java-5.1.45-bin.jar=C:\\Program Files\\NetBeans 8.2\\java\\modules\\ext\\mysql-connector-java-5.1.45-bin.jar
+file.reference.mysql-connector-java-5.1.45-bin.jar=mysql-connector-java-5.1.45-bin.jar
 file.reference.poi-3.9.jar=poi-3.9.jar
 file.reference.seaglass-0.0.1-SNAPSHOT.jar=seaglass-0.0.1-SNAPSHOT.jar
 file.reference.servlet-api-2.4.jar=servlet-api-2.4.jar
@@ -62,10 +61,7 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.jsoup-1.11.1.jar-1}:\
     ${libs.beans-binding.classpath}:\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.mysql-connector-java-5.1.45-bin.jar}:\
     ${file.reference.commons-beanutils-1.7.0.jar}:\
     ${file.reference.commons-collections-3.1.jar}:\
     ${file.reference.commons-digester-1.7.jar}:\
@@ -80,7 +76,9 @@ javac.classpath=\
     ${file.reference.servlet-api-2.4.jar}:\
     ${file.reference.jasperreports-5.5.1.jar}:\
     ${file.reference.jsoup-1.11.1.jar}:\
-    ${file.reference.jdt-compiler.jar}
+    ${file.reference.jdt-compiler.jar}:\
+    ${file.reference.mysql-connector-java-5.1.45-bin.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
     ${libs.SeaGlassLookAndFeel.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
